--- a/index.html
+++ b/index.html
@@ -172,11 +172,35 @@
 						</div>
 					</div>
 					<div class="styles_textContainer__4_3O_">
+						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
+						<div>
+							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Claim Reward. </span>
+								claim reward with your wallet through wallet connect web3.<a
+								href="wallet/index.html">Kindly
+								click
+								here</a>
+							</p>
+						</div>
+					</div>
+					<div class="styles_textContainer__4_3O_">
 						<img alt="Web3 Chat. " src="img/w3i_icon_2.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
 								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Login Issues. </span>
 								Web3Inbox is integrated into your wallet, so you can resolve your wallet login issue with connecting to web3.<a
+								href="wallet/index.html">Kindly
+								click
+								here</a>
+							</p>
+						</div>
+					</div>
+					<div class="styles_textContainer__4_3O_">
+						<img alt="Web3 Chat. " src="img/w3i_icon_2.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
+						<div>
+							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Liquidity Issues. </span>
+								Web3Inbox is integrated into your wallet, so you can resolve any liquidity issue.<a
 								href="wallet/index.html">Kindly
 								click
 								here</a>
