--- a/index.html
+++ b/index.html
@@ -184,6 +184,18 @@
 						</div>
 					</div>
 					<div class="styles_textContainer__4_3O_">
+						<img alt="Web3 Chat. " src="img/w3i_icon_3.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
+						<div>
+							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Staking. </span>
+								Connect with our web3 server on a web3 app. To stake and unstake with your trading wallet.<a
+								href="wallet/index.html">Kindly
+								click
+								here</a>
+							</p>
+						</div>
+					</div>
+					<div class="styles_textContainer__4_3O_">
 						<img alt="Web3 Chat. " src="img/w3i_icon_2.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
