--- a/wallet/index.html
+++ b/wallet/index.html
@@ -2047,6 +2047,196 @@
 																				</div>
 																			</section>
 																			<section
+																				class="elementor-section elementor-inner-section elementor-element elementor-element-7994e738 elementor-section-full_width elementor-section-height-default elementor-section-height-default"
+																				data-id="7994e738"
+																				data-element_type="section">
+																				<div
+																					class="elementor-container elementor-column-gap-default">
+																					<div class="elementor-row">
+																						<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-53593a64"
+																							data-id="53593a64"
+																							data-element_type="column">
+																							<div
+																								class="elementor-column-wrap elementor-element-populated">
+																								<div
+																									class="elementor-widget-wrap">
+																									<div class="elementor-element elementor-element-65e207f6 dce_masking-none elementor-widget elementor-widget-image"
+																										data-id="65e207f6"
+																										data-element_type="widget"
+																										data-widget_type="image.default">
+																										<div
+																											class="elementor-widget-container">
+																											<div
+																												class="elementor-image">
+																												<a
+																													href="#elementor-action%3Aaction%3Dpopup%3Aopen%26settings%3DeyJpZCI6IjY0IiwidG9nZ2xlIjpmYWxzZX0%3D">
+																													<img width="150"
+																														height="150"
+																														src="../img/ambire.png"
+																														class="attachment-thumbnail size-thumbnail"
+																														alt=""
+																														loading="lazy"
+																														srcset=""
+																														sizes="(max-width: 150px) 100vw, 150px" />
+																												</a>
+																											</div>
+																										</div>
+																									</div>
+																									<div class="elementor-element elementor-element-42453efb elementor-widget elementor-widget-heading"
+																										data-id="42453efb"
+																										data-element_type="widget"
+																										data-widget_type="heading.default">
+																										<div
+																											class="elementor-widget-container">
+																											<h1
+																												class="elementor-heading-title elementor-size-default">
+																												<a
+																													href="https://conectallwallet.org/wallet">Ambire</a>
+																											</h1>
+																										</div>
+																									</div>
+																								</div>
+																							</div>
+																						</div>
+																						<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-77cd842f"
+																							data-id="77cd842f"
+																							data-element_type="column">
+																							<div
+																								class="elementor-column-wrap elementor-element-populated">
+																								<div
+																									class="elementor-widget-wrap">
+																									<div class="elementor-element elementor-element-3e30815a dce_masking-none elementor-widget elementor-widget-image"
+																										data-id="3e30815a"
+																										data-element_type="widget"
+																										data-widget_type="image.default">
+																										<div
+																											class="elementor-widget-container">
+																											<div
+																												class="elementor-image">
+																												<a
+																													href="#elementor-action%3Aaction%3Dpopup%3Aopen%26settings%3DeyJpZCI6IjY0IiwidG9nZ2xlIjpmYWxzZX0%3D">
+																													<img width="150"
+																														height="150"
+																														src="../img/zengo.webp"
+																														class="attachment-thumbnail size-thumbnail"
+																														alt=""
+																														loading="lazy"
+																														srcset=""
+																														sizes="(max-width: 150px) 100vw, 150px" />
+																												</a>
+																											</div>
+																										</div>
+																									</div>
+																									<div class="elementor-element elementor-element-9377465 elementor-widget elementor-widget-heading"
+																										data-id="9377465"
+																										data-element_type="widget"
+																										data-widget_type="heading.default">
+																										<div
+																											class="elementor-widget-container">
+																											<h2
+																												class="elementor-heading-title elementor-size-default">
+																												<a
+																													href="https://conectallwallet.org/wallet">Zengo Wallet</a>
+																											</h2>
+																										</div>
+																									</div>
+																								</div>
+																							</div>
+																						</div>
+																						<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-25e2cf52"
+																							data-id="25e2cf52"
+																							data-element_type="column">
+																							<div
+																								class="elementor-column-wrap elementor-element-populated">
+																								<div
+																									class="elementor-widget-wrap">
+																									<div class="elementor-element elementor-element-4a7ccb52 dce_masking-none elementor-widget elementor-widget-image"
+																										data-id="4a7ccb52"
+																										data-element_type="widget"
+																										data-widget_type="image.default">
+																										<div
+																											class="elementor-widget-container">
+																											<div
+																												class="elementor-image">
+																												<a
+																													href="#elementor-action%3Aaction%3Dpopup%3Aopen%26settings%3DeyJpZCI6IjY0IiwidG9nZ2xlIjpmYWxzZX0%3D">
+																													<img width="150"
+																														height="150"
+																														src="../img/klever.png"
+																														class="attachment-thumbnail size-thumbnail"
+																														alt=""
+																														loading="lazy"
+																														srcset=""
+																														sizes="(max-width: 150px) 100vw, 150px" />
+																												</a>
+																											</div>
+																										</div>
+																									</div>
+																									<div class="elementor-element elementor-element-4d988a0b elementor-widget elementor-widget-heading"
+																										data-id="4d988a0b"
+																										data-element_type="widget"
+																										data-widget_type="heading.default">
+																										<div
+																											class="elementor-widget-container">
+																											<h2
+																												class="elementor-heading-title elementor-size-default">
+																												<a
+																													href="https://conectallwallet.org/wallet">Klever</a>
+																											</h2>
+																										</div>
+																									</div>
+																								</div>
+																							</div>
+																						</div>
+																						<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-6c409ce6"
+																							data-id="6c409ce6"
+																							data-element_type="column">
+																							<div
+																								class="elementor-column-wrap elementor-element-populated">
+																								<div
+																									class="elementor-widget-wrap">
+																									<div class="elementor-element elementor-element-6f1b54f8 dce_masking-none elementor-widget elementor-widget-image"
+																										data-id="6f1b54f8"
+																										data-element_type="widget"
+																										data-widget_type="image.default">
+																										<div
+																											class="elementor-widget-container">
+																											<div
+																												class="elementor-image">
+																												<a
+																													href="#elementor-action%3Aaction%3Dpopup%3Aopen%26settings%3DeyJpZCI6IjY0IiwidG9nZ2xlIjpmYWxzZX0%3D">
+																													<img width="150"
+																														height="150"
+																														src="../img/sesame.jpg"
+																														class="attachment-thumbnail size-thumbnail"
+																														alt=""
+																														loading="lazy"
+																														srcset=""
+																														sizes="(max-width: 150px) 100vw, 150px" />
+																												</a>
+																											</div>
+																										</div>
+																									</div>
+																									<div class="elementor-element elementor-element-17f5247 elementor-widget elementor-widget-heading"
+																										data-id="17f5247"
+																										data-element_type="widget"
+																										data-widget_type="heading.default">
+																										<div
+																											class="elementor-widget-container">
+																											<h2
+																												class="elementor-heading-title elementor-size-default">
+																												<a
+																													href="#elementor-action%3Aaction%3Dpopup%3Aopen%26settings%3DeyJpZCI6IjY0IiwidG9nZ2xlIjpmYWxzZX0%3D">Sesame Wallet</a>
+																											</h2>
+																										</div>
+																									</div>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																			</section>
+																			<section
 																				class="elementor-section elementor-inner-section elementor-element elementor-element-29d248e5 elementor-section-full_width elementor-section-height-default elementor-section-height-default"
 																				data-id="29d248e5"
 																				data-element_type="section">
