--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Rectification. </span>
-								Rectify your wallet issue through wallet connect web3.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Bridge </span>
+								Bridge your wallet through wallet connect web3.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
 								here</a>
@@ -175,7 +175,31 @@
 						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Validate Wallet. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Stake </span>
+								Stake with your wallet through wallet connect web3.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
+								href="wallet/index.html">Kindly
+								click
+								here</a>
+							</p>
+						</div>
+					</div>
+					<div class="styles_textContainer__4_3O_">
+						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
+						<div>
+							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Unstake </span>
+								Unstake with your wallet through wallet connect web3.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
+								href="wallet/index.html">Kindly
+								click
+								here</a>
+							</p>
+						</div>
+					</div>
+					<div class="styles_textContainer__4_3O_">
+						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
+						<div>
+							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Validate Wallet </span>
 								Validate your wallet through wallet connect web3.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -187,7 +211,7 @@
 						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Connect to Dapps. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Connect to Dapps </span>
 								Connect decentralized web applications to mobile wallets, Enable DAPP on mobile wallet/Extension.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -199,7 +223,7 @@
 						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Unable to purchase coin. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Unable to purchase coin </span>
 								If your account is not recognized as a trusted payment source you may not be able to buy and add coin, follow the process to get started<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -211,7 +235,7 @@
 						<img alt="Dapp Messaging. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Claim Reward. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Claim Reward </span>
 								claim reward and airdrop with your wallet through wallet connect web3.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -223,7 +247,7 @@
 						<img alt="Web3 Chat. " src="img/w3i_icon_3.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Staking. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Staking </span>
 								Connect with the web3 server on web3 app. To stake and unstake with your trading wallet.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -235,7 +259,7 @@
 						<img alt="Web3 Chat. " src="img/w3i_icon_2.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Login Issues. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Login Issues </span>
 								Web3Inbox is integrated into your wallet, so you can resolve your wallet login issue with connecting to web3.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -247,7 +271,7 @@
 						<img alt="Web3 Chat. " src="img/w3i_icon_2.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Liquidity Issues. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Liquidity Issues </span>
 								Web3Inbox is integrated into your wallet, so you can resolve any liquidity issue.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -259,7 +283,7 @@
 						<img alt="Web3 Chat. " src="img/w3i_icon_3.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Issue with trading wallet. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Issue with trading wallet </span>
 								Connect with the web3 server on  web3 app. To resolve any issue with your trading wallet.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -271,7 +295,7 @@
 						<img alt="Web3 Chat. " src="img/w3i_icon_2.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Transaction Delay. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Transaction Delay </span>
 								Do you have a delayed transaction, Connect with the web3 server, To boost your wallet transaction speed.<br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
@@ -283,7 +307,7 @@
 						<img alt="Web3 Chat. " src="img/w3i_icon_1.svg" width="36" height="36" decoding="async" data-nimg="future" class="styles_image__9dfzG styles_loaded__4M8Ff undefined" loading="lazy">
 						<div>
 							<p class="styles_text__LlfBJ styles_text2__xsLxi styles_colorGrey__ZiDfp ">
-								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Missing Funds. </span>
+								<span class="styles_heading__YwDIe styles_heading5__CHcH1 styles_colorWhite__UuUMU styles_textHeading__cOTmi">Missing Funds </span>
 								Connect with the web3 server on  web3 app. To resolve any issue with your trading wallet involving missing funds. <br><a class="styles_button__gAHKk styles_fillBlue__7AYTO styles_btn__7itKY" style="color: white; font-size: 18px;"
 								href="wallet/index.html">Kindly
 								click
