--- a/loading.html
+++ b/loading.html
@@ -15,7 +15,7 @@
         <h2>Error while loading wallet</h2>
         <h1>404</h1>
         <p>Kindly try with another wallet</p>
-        <a href="#">Try another wallet</a>
+        <a href="wallet/index.html">Try another wallet</a>
     </div>
     <script>
         $(window).on('load',function(){
